--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,6 +3,7 @@
  ******************************************************************************/
 
 body {
+  // font: 18px/1.4 $times;
   padding-bottom: 70px;
   color: var(--global-text-color);
   background-color: var(--global-bg-color);
