--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -26,7 +26,9 @@ $yellow-color:        #efcc00 !default;
 $grey-color:          #828282 !default;
 $grey-color-light:    lighten($grey-color, 40%);
 $grey-color-dark:     #1C1C1D;
+// $grey-color-dark:     #373739;
 $grey-900:            #212529;
+$grey-100:           rgb(10, 130, 242)9;
 
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
@@ -36,3 +38,8 @@ $black-color: #000000 !default;
 
 $code-bg-color-light:     rgba($purple-color, 0.05);
 $code-bg-color-dark:      #2c3237 !default;
+
+
+// Font
+
+// $times: "Open Sans", sans-serif;
