--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -9,8 +9,8 @@
   --global-text-color-light: #{$grey-color};
   // --global-theme-color: #{$purple-color};
   // --global-hover-color: #{$purple-color};
-  --global-theme-color: #{$grey-color};
-  --global-hover-color: #{$grey-color-dark};
+  --global-theme-color: #{$blue-color-dark};
+  --global-hover-color: #{$cyan-color};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color-light};
   --global-footer-link-color: #{$white-color};
@@ -43,7 +43,7 @@ html[data-theme='dark'] {
   // --global-theme-color: #{$cyan-color};
   // --global-hover-color: #{$cyan-color};
   --global-theme-color: #{$grey-color};
-  --global-hover-color: #{$grey-color-light};
+  --global-hover-color: #{$grey-color};
   --global-footer-bg-color: #{$grey-color-light};
   --global-footer-text-color: #{$grey-color-dark};
   --global-footer-link-color: #{$black-color};
