--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -183,6 +183,7 @@ blockquote {
     margin-bottom: 5px;
     margin-top: 5px;
     font-family: monospace;
+    // font-family: serif;
 
     p {
       display: inline-block;
