--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -674,8 +674,8 @@ footer.sticky-bottom {
 
       .preview {
         width: 100%;
-        min-width: 80px;
-        max-width: 200px;
+        width: 120px;
+        height: 60px;
       }
 
       .abbr {
