--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -16,7 +16,7 @@ $green-color-lime: #b7d12a !default;
 $green-color-dark: #009f06 !default;
 $green-color-light: #ddffdd !default;
 $green-color-bright: #11d68b !default;
-$purple-color: #6c5aa0 !default;
+$purple-color: #5b41a9 !default;
 $light-purple-color: lighten($purple-color, 25%);
 $pink-color: #f92080 !default;
 $pink-color-light: #ffdddd !default;
